Complete header and first section of webpage.
I used a lot of divs and flexbox containers to make everything work.
This may not be the highest quality code and it may not be best practice.
But, it is what I am capable of.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
     </div>
     <div class="main-container">
       <div class="section-1">
-        <div class="subsec1"></div>
-        <div class="subsec2"></div>
+        <div class="subsec1">
+          <div class="main-text">This website is awesome</div>
+          <div class="main-subtext">
+            This is some subtext from the main text. It's a bit smaller that the
+            main text and also a different color. Here is placeholder text.
+          </div>
+          <button>Sign Up</button>
+        </div>
+        <div class="subsec2">Image here soon</div>
       </div>
     </div>
     <div class="footer"></div>
