Create second section and give img credit

--- a/index.html
+++ b/index.html
@@ -36,7 +36,41 @@
           </div>
           <button>Sign Up</button>
         </div>
-        <div class="subsec2">Image here soon</div>
+        <div class="subsec2">
+          <img
+            src="https://cdn.pixabay.com/photo/2022/12/13/13/30/bird-7653386_960_720.jpg"
+            alt="nlue bird"
+          />
+        </div>
+      </div>
+      <div class="section-2">
+        <div class="section-2-title">Types of Blue Birds</div>
+        <div class="box-container">
+          <div class="media">
+            <div class="media-box"></div>
+            <div class="media-text">
+              Here is a picture of a random blue bird. Guess which type it is.
+            </div>
+          </div>
+          <div class="media">
+            <div class="media-box"></div>
+            <div class="media-text">
+              Here is a picture of a random blue bird. Guess which type it is.
+            </div>
+          </div>
+          <div class="media">
+            <div class="media-box"></div>
+            <div class="media-text">
+              Here is a picture of a random blue bird. Guess which type it is.
+            </div>
+          </div>
+          <div class="media">
+            <div class="media-box"></div>
+            <div class="media-text">
+              Here is a picture of a random blue bird. Guess which type it is.
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer"></div>
