Add images to second section and finalize section.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
         <div class="subsec2">
           <img
+            class="img-1"
             src="https://cdn.pixabay.com/photo/2022/12/13/13/30/bird-7653386_960_720.jpg"
             alt="nlue bird"
           />
@@ -47,25 +48,49 @@
         <div class="section-2-title">Types of Blue Birds</div>
         <div class="box-container">
           <div class="media">
-            <div class="media-box"></div>
+            <div class="media-box">
+              <img
+                class="bird-image"
+                src="https://images.unsplash.com/photo-1612229248559-c26b9627c517?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=711&q=80"
+                alt="blue bird"
+              />
+            </div>
             <div class="media-text">
               Here is a picture of a random blue bird. Guess which type it is.
             </div>
           </div>
           <div class="media">
-            <div class="media-box"></div>
+            <div class="media-box">
+              <img
+                src="https://images.unsplash.com/photo-1618162367585-fa0f2f69d917?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                alt="another blue bird"
+                class="bird-image"
+              />
+            </div>
             <div class="media-text">
               Here is a picture of a random blue bird. Guess which type it is.
             </div>
           </div>
           <div class="media">
-            <div class="media-box"></div>
+            <div class="media-box">
+              <img
+                src="https://images.unsplash.com/photo-1633279156874-5f648d4efc68?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"
+                alt="another blue bird"
+                class="bird-image"
+              />
+            </div>
             <div class="media-text">
               Here is a picture of a random blue bird. Guess which type it is.
             </div>
           </div>
           <div class="media">
-            <div class="media-box"></div>
+            <div class="media-box">
+              <img
+                src="https://images.unsplash.com/photo-1618102292821-ad0f30bb52a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                alt="even another blue bird image"
+                class="bird-image"
+              />
+            </div>
             <div class="media-text">
               Here is a picture of a random blue bird. Guess which type it is.
             </div>
