Complete 3rd section in a shabby way
Could not match the dimensions and placements of odins image they
provided. will revisit later.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
           </div>
         </div>
       </div>
+      <div class="section-3">
+        <div class="quote">
+          <em>The Bluebird carries the sky on his back.</em>
+        </div>
+        <div class="quote-end">- H. Thoreau</div>
+      </div>
     </div>
     <div class="footer"></div>
   </body>
