Add last section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
         </div>
         <div class="quote-end">- H. Thoreau</div>
       </div>
+      <div class="section-4">
+        <div class="ad">
+          <div class="call-to-action">
+            <div class="call-1">Now is your time to learn about birds!</div>
+            <div class="call-2">
+              Sign up to learn all the things you need to know about blue birds
+              via email!
+            </div>
+          </div>
+          <div class="button"><button>Sign up!</button></div>
+        </div>
+      </div>
     </div>
     <div class="footer"></div>
   </body>
