Complete project and add final notes

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
         </div>
       </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+      <div class="footer-content">Copyright © The Odin Project</div>
+    </div>
   </body>
 </html>
